--- a/index.html
+++ b/index.html
@@ -65,5 +65,89 @@
         </div>
       </div>
     </div>
+
+    <main class="main">
+      <div class="films">
+        <div class="container">
+          <div class="title">
+            <h2 class="title__h">films</h2>
+          </div>
+          <div class="films__wrap">
+            <div class="films__card">
+              <div class="films__bg"></div>
+              <div class="films__card-top">
+                <span class="films__card-icon">
+                  <i class="fad fa-play"></i>
+                </span>
+                <p class="films__card-time">2:14:33</p>
+              </div>
+              <div class="films__card-buttom">
+                <h3 class="films__card-buttom_h">Black Panther</h3>
+                <p class="films__card-buttom_p">
+                  At first glance, you can decide that Wakanda is an ordinary
+                  territory of wild Africa, but this is not so. Here, in the
+                  bowels of the desert lands, there are hidden deposits of a
+                  unique metal capable of absorbing...
+                </p>
+              </div>
+            </div>
+            <div class="films__card">
+              <div class="films__bg"></div>
+              <div class="films__card-top">
+                <span class="films__card-icon">
+                  <i class="fad fa-play"></i>
+                </span>
+                <p class="films__card-time">2:32:13</p>
+              </div>
+              <div class="films__card-buttom">
+                <h3 class="films__card-buttom_h">The Dark Knight</h3>
+                <p class="films__card-buttom_p">
+                  Batman raises stakes in the war on crime. With the help of
+                  Lieutenant Jim Gordon and Attorney Harvey Dent, he intends to
+                  clear the streets of crime that is poisoning the city. The
+                  cooperation is effective, but soon they...
+                </p>
+              </div>
+            </div>
+            <div class="films__card">
+              <div class="films__bg"></div>
+              <div class="films__card-top">
+                <span class="films__card-icon">
+                  <i class="fad fa-play"></i>
+                </span>
+                <p class="films__card-time">1:53:45</p>
+              </div>
+              <div class="films__card-buttom">
+                <h3 class="films__card-buttom_h">The Gentlemen</h3>
+                <p class="films__card-buttom_p">
+                  One cunning American, from his student years, had been selling
+                  drugs, and now he came up with a scheme of illegal enrichment
+                  using the estates of an impoverished English aristocracy and
+                  made a very good fortune on ...
+                </p>
+              </div>
+            </div>
+            <div class="films__card">
+              <div class="films__bg"></div>
+              <div class="films__card-top">
+                <span class="films__card-icon">
+                  <i class="fad fa-play"></i>
+                </span>
+                <p class="films__card-time">2:58:20</p>
+              </div>
+              <div class="films__card-buttom">
+                <h3 class="films__card-buttom_h">The Lord of the rings</h3>
+                <p class="films__card-buttom_p">
+                  Tales of Middle-earth is a chronicle of the Great War for the
+                  Ring, a war that lasted more than one thousand years. The one
+                  who owned the Ring received power over all living creatures,
+                  but was obliged to serve evil...
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
