--- a/index.html
+++ b/index.html
@@ -148,6 +148,30 @@
           </div>
         </div>
       </div>
+
+      <section class="trailer">
+        <video class="trailer__video"
+          src="./videos/Marvel Studios' Black Widow _ Final Trailer.mp4"
+          autoplay
+          loop
+          muted
+        ></video>
+        <div class="container">
+          <div class="trailer__wrap">
+            <div class="trailer__logo">
+              <img src="./img/trail.png" alt="" />
+            </div>
+            <p class="trailer__desc">
+              After the events at the Leipzig-Halle airport, Natasha was
+              overtaken by the mistakes of the past. The Red Room again made
+              itself felt - a program to create Widows - professional killers
+              and spies - just like her. Natasha decides once and for all to
+              deal with people whose efforts she herself became a Widow.
+            </p>
+            <button class="btn">Watch now</button>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
